--- a/portfolio.html
+++ b/portfolio.html
@@ -14,18 +14,17 @@
             <nav class="nav">
                 <a href="./index.html"><span class="first-name">Web</span><span class="last-name"> Studio</span></a>
                 <ul class="nav-link">
-                    <li><a href="./index.html" class="title">Студия</a></li>
-                    <li><a href="" class="title current">Портфолио</a></li>
-                    <li><a href="" class="title">Контакты</a></li>
+                    <li class="item"><a href="./index.html" class="title">Студия</a></li>
+                    <li class="item"><a href="" class="title current">Портфолио</a></li>
+                    <li class="item"><a href="" class="title">Контакты</a></li>
                 </ul>
                 <ul class="nav-contacts">
-                    <li><a href="mailto:info@devstudio.com" class="link"><img src="./images/mail.svg" alt="Иконка емейл"> info@devstudio.com</a></li>
-                    <li><a href="tel:+380961111111" class="link"><img src="./images/phone.svg" alt="Иконка телефона"> +38 096 111 11 11</a></li>
+                    <li class="item"><a href="mailto:info@devstudio.com" class="link"><img src="./images/mail.svg" alt="Иконка емейл" class="image"> info@devstudio.com</a></li>
+                    <li class="item"><a href="tel:+380961111111" class="link"><img src="./images/phone.svg" alt="Иконка телефона" class="image"> +38 096 111 11 11</a></li>
                 </ul>
             </nav>
-            <div class="header-line"></div>
         </div>
-    </header>    
+    </header>     
 
     <main>
         <!--Скрытый заголовок-->
