отправил ментору на проверку

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             <h2>Адрес и контакты</h2>
             <section class="footer-flex">
                 <div>
-                    <a href="./index.html"><span class="first-name-logo">Web</span><span class="last-name-logo"> Studio</span></a>
+                    <a href="./index.html" class="footer-logo"><span class="first-name-logo">Web</span><span class="last-name-logo"> Studio</span></a>
                     <address class="contacts">
                         <p>г. Киев, пр-т Леси Украинки, 26</p>
                         <ul>
@@ -173,15 +173,16 @@
                     </address>
                 </div>
 
-                <h2 class="join">присоединяйтесь</h2>
                 <div>
+                    <h2 class="join">присоединяйтесь</h2>
                     <ul class="social-links-footer">
-                        <li><a href="" class="join-link"><img src="./images/social-links-white/instagram-white.svg" alt="Логотип Инстаграм" class="join-photo"></a></li>
-                        <li><a href="" class="join-link"><img src="./images/social-links-white/twitter-white.svg" alt="Логотип Твиттер" class="join-photo"></a></li>
-                        <li><a href="" class="join-link"><img src="./images/social-links-white/facebook-white.svg" alt="Логотип Фейсбук" class="join-photo"></a></li>
-                        <li><a href="" class="join-link"><img src="./images/social-links-white/linkedin-white.svg" alt="Логотип Ликнедин" class="join-photo"></a></li>
+                        <li class="social-logo"><a href="" class="join-link"><img src="./images/social-links-white/instagram-white.svg" alt="Логотип Инстаграм" class="join-photo"></a></li>
+                        <li class="social-logo"><a href="" class="join-link"><img src="./images/social-links-white/twitter-white.svg" alt="Логотип Твиттер" class="join-photo"></a></li>
+                        <li class="social-logo"><a href="" class="join-link"><img src="./images/social-links-white/facebook-white.svg" alt="Логотип Фейсбук" class="join-photo"></a></li>
+                        <li class="social-logo"><a href="" class="join-link"><img src="./images/social-links-white/linkedin-white.svg" alt="Логотип Ликнедин" class="join-photo"></a></li>
                     </ul>
                 </div>
+                
             </section>
             <div class="line"></div>
             <p class="developers">2020 | Developed by GoIT Students</p>
