--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>   
     <main>
         <section class="hero">
-            <h1 class="title">Эффективные решения<br>для вашего бизнеса</h1>
+            <h1 class="title">Эффективные решения для вашего бизнеса</h1>
             <a href="" class="link">Заказать услугу</a>
         </section>
         
