калькулятор для портфолио

--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,7 @@
                 <h2>Перечень самих работ</h2>
    
                    <ul class="portfolio">
-                       <li class="porfolio-links">
+                       <li class="portfolio-links">
                            <a href="" class="portfolio-elements">
                                <img src="./images/portfolio/techno_crack.jpg" alt="Фотография ноутбука" width="380">
                                <p class="text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -60,7 +60,7 @@
                                <p class="product">Веб-сайт</p>
                            </a>
                        </li>
-                       <li class="porfolio-links">
+                       <li class="portfolio-links">
                            <a href="" class="portfolio-elements">
                                <img src="./images/portfolio/basketball_players.jpg" alt="Фотография баскетболистов" width="380">
                                <p class="text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -68,7 +68,7 @@
                                <p class="product">Дизайн</p>
                            </a>
                        </li>
-                       <li class="porfolio-links">
+                       <li class="portfolio-links">
                            <a href="" class="portfolio-elements">
                                <img src="./images/portfolio/seafood_restaurant.jpg" alt="Фотография логотипа ресторана" width="380">
                                <p class="text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -76,7 +76,7 @@
                                <p class="product">Приложение</p>
                            </a>
                        </li>
-                       <li class="porfolio-links">
+                       <li class="portfolio-links">
                            <a href="" class="portfolio-elements">
                                <img src="./images/portfolio/headphones.jpg" alt="Фоторафия наушников" width="380">
                                <p class="text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -84,7 +84,7 @@
                                <p class="product">Маркетинг</p>
                            </a>
                        </li>
-                       <li class="porfolio-links">
+                       <li class="portfolio-links">
                            <a href="" class="portfolio-elements">
                                <img src="./images/portfolio/project_boxes.jpg" alt="Фотография коробок" width="380">
                                <p class="text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -92,7 +92,7 @@
                                <p class="product">Приложение</p>
                            </a>
                        </li>
-                       <li class="porfolio-links">
+                       <li class="portfolio-links">
                            <a href="" class="portfolio-elements">
                                <img src="./images/portfolio/display.jpg" alt="Фотография монитора" width="380">
                                <p class="text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -100,7 +100,7 @@
                                <p class="product">Веб-сайт</p>
                            </a>
                        </li>
-                       <li class="porfolio-links">
+                       <li class="portfolio-links">
                            <a href="" class="portfolio-elements">
                                <img src="./images/portfolio/limited_edition.jpg " alt="Фотография журнала" width="380">
                                <p class="text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -108,7 +108,7 @@
                                <p class="product">Дизайн</p>
                            </a>
                        </li>
-                       <li class="porfolio-links">
+                       <li class="portfolio-links">
                            <a href="" class="portfolio-elements">
                                <img src="./images/portfolio/project_lab.jpg" alt="Фотография этикетки" width="380">
                                <p class="text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -116,7 +116,7 @@
                                <p class="product">Маркетинг</p>
                            </a>
                        </li>
-                       <li class="porfolio-links">
+                       <li class="portfolio-links">
                            <a href="" class="portfolio-elements">
                                <img src="./images/portfolio/notebook.jpg" alt="Фотография ноутбука" width="380">
                                <p class="text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
