внес правки ментора (отправил на проверку)

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <div class="container">
             <nav class="nav">
-                <a href="./index.html"><span class="first-name">Web</span><span class="last-name"> Studio</span></a>
+                <a href="./index.html" class="nav-logo"><span class="first-name">Web</span><span class="last-name"> Studio</span></a>
                 <ul class="nav-link">
                     <li class="item"><a href="" class="title current">Студия</a></li>
                     <li class="item"><a href="./portfolio.html" class="title">Портфолио</a></li>
@@ -33,7 +33,7 @@
         
         <section>
             <!--Скрытый заголовок-->
-            <h2>Преимущества</h2>
+            <h2 class="hidden">Преимущества</h2>
             <div class="container">
                 <ul class="advantages">
                     <li class="advantages-element">
@@ -69,7 +69,7 @@
         </section>
         
         <section>
-            <div class="container">
+            <div class="container employment">
                 <h2 class="title-section">Чем мы занимаемся</h2>
                 <ul class="benefit">
                     <li>
@@ -90,11 +90,11 @@
         </section>
 
         <section class="team">
-            <div class="container">
+            <div class="container employment-team">
                 <h2 class="title-section">Наша команда</h2>
                 <ul class="team-flex">
-                    <li>
-                        <img src="./images/John.png" alt="Фото Джона Смита" width="278" class="team-photo">
+                    <li class="team-flex-item">
+                        <img src="./images/John.png" alt="Фото Джона Смита" width="278" class="team-flex-photo">
                         <h3 lang="en" class="title">John Smith</h3>
                         <p lang="en">Product Designer</p>
                         <ul class="social-links">
@@ -104,8 +104,8 @@
                             <li><a href=""><img src="./images/linkedin.svg" alt="Логотип Ликнедин"></a></li>
                         </ul>                
                     </li>
-                    <li>
-                        <img src="./images/Marta.png" alt="Фото Марты Стюарт" width="278" class="team-photo">
+                    <li class="team-flex-item">
+                        <img src="./images/Marta.png" alt="Фото Марты Стюарт" width="278" class="team-flex-photo">
                         <h3 lang="en" class="title">Marta Stewart</h3>
                         <p lang="en">Frontend Developer</p>
                         <ul class="social-links">
@@ -115,8 +115,8 @@
                             <li><a href=""><img src="./images/linkedin.svg" alt="Логотип Ликнедин"></a></li>
                         </ul>
                     </li>
-                    <li>
-                        <img src="./images/Robert.png" alt="Фото Роберта Якиса" width="278" class="team-photo">
+                    <li class="team-flex-item">
+                        <img src="./images/Robert.png" alt="Фото Роберта Якиса" width="278" class="team-flex-photo">
                         <h3 lang="en" class="title">Robert Jakis</h3>
                         <p lang="en">Marketing</p>
                         <ul class="social-links">
@@ -126,8 +126,8 @@
                             <li><a href=""><img src="./images/linkedin.svg" alt="Логотип Ликнедин"></a></li>
                         </ul>
                     </li>
-                    <li>
-                        <img src="./images/Martin.png" alt="Фото Мартина До" width="278" class="team-photo">
+                    <li class="team-flex-item">
+                        <img src="./images/Martin.png" alt="Фото Мартина До" width="278" class="team-flex-photo">
                         <h3 lang="en" class="title">Martin Doe</h3>
                         <p lang="en">UI Designer</p>
                         <ul class="social-links">
@@ -143,7 +143,7 @@
         </section>
 
         <section>
-            <div class="container">
+            <div class="container employment-partners">
                 <h2 class="title-section">Постоянные клиенты</h2>
                 <ul class="partners">
                     <li><a href=""><img src="./images/partners/ya&co.svg" alt="" class="yaco"></a></li>
@@ -160,9 +160,9 @@
     <footer>
         <div class="container footer">
             <!--Скрытый заголовок-->
-            <h2>Адрес и контакты</h2>
+            <h2 class="hidden">Адрес и контакты</h2>
             <section class="footer-flex">
-                <div>
+                <div class="footer-flex-block">
                     <a href="./index.html" class="footer-logo"><span class="first-name-logo">Web</span><span class="last-name-logo"> Studio</span></a>
                     <address class="contacts">
                         <p>г. Киев, пр-т Леси Украинки, 26</p>
@@ -173,7 +173,7 @@
                     </address>
                 </div>
 
-                <div>
+                <div class="footer-flex-block">
                     <h2 class="join">присоединяйтесь</h2>
                     <ul class="social-links-footer">
                         <li class="social-logo"><a href="" class="join-link"><img src="./images/social-links-white/instagram-white.svg" alt="Логотип Инстаграм" class="join-photo"></a></li>
