--- a/portfolio.html
+++ b/portfolio.html
@@ -12,10 +12,10 @@
     <header>
         <div class="container">
             <nav class="nav">
-                <a href="./index.html"><span class="first-name">Web</span><span class="last-name"> Studio</span></a>
+                <a href="./index.html" class="nav-logo"><span class="first-name">Web</span><span class="last-name"> Studio</span></a>
                 <ul class="nav-link">
                     <li class="item"><a href="./index.html" class="title">Студия</a></li>
-                    <li class="item"><a href="" class="title current">Портфолио</a></li>
+                    <li class="item current"><a href="" class="title">Портфолио</a></li>
                     <li class="item"><a href="" class="title">Контакты</a></li>
                 </ul>
                 <ul class="nav-contacts">
@@ -23,9 +23,8 @@
                     <li class="item"><a href="tel:+380961111111" class="link"><img src="./images/phone.svg" alt="Иконка телефона" class="image"> +38 096 111 11 11</a></li>
                 </ul>
             </nav>
-            
         </div>
-    </header>     
+    </header>   
 
     <main>
         <!--Скрытый заголовок-->
@@ -49,7 +48,7 @@
         <div class="container">
             <section class="works">
                 <!--Скрытый заголовок-->
-                <h2>Перечень самих работ</h2>
+                <h2 class="hidden">Перечень самих работ</h2>
    
                    <ul class="portfolio">
                        <li class="portfolio-links">
@@ -133,9 +132,9 @@
     <footer>
         <div class="container footer">
             <!--Скрытый заголовок-->
-            <h2>Адрес и контакты</h2>
+            <h2 class="hidden">Адрес и контакты</h2>
             <section class="footer-flex">
-                <div>
+                <div class="footer-flex-block">
                     <a href="./index.html" class="footer-logo"><span class="first-name-logo">Web</span><span class="last-name-logo"> Studio</span></a>
                     <address class="contacts">
                         <p>г. Киев, пр-т Леси Украинки, 26</p>
@@ -146,7 +145,7 @@
                     </address>
                 </div>
 
-                <div>
+                <div class="footer-flex-block">
                     <h2 class="join">присоединяйтесь</h2>
                     <ul class="social-links-footer">
                         <li class="social-logo"><a href="" class="join-link"><img src="./images/social-links-white/instagram-white.svg" alt="Логотип Инстаграм" class="join-photo"></a></li>
