--- a/index.html
+++ b/index.html
@@ -69,19 +69,19 @@
         </section>
         
         <section>
-            <div class="container employment">
+            <div class="container employment-section">
                 <h2 class="title-section">Чем мы занимаемся</h2>
                 <ul class="benefit">
-                    <li>
-                        <img src="./images/desktop.png" alt="Иконка персонального компьютера" width="380">
+                    <li class="benefit-item">
+                        <img src="./images/desktop.png" alt="Иконка персонального компьютера" width="370">
                         <h3 class="capabilities">Десктопные приложения</h3>
                     </li>
-                    <li>
-                        <img src="./images/smartphone.png" alt="Иконка смартфона" width="380">
+                    <li class="benefit-item">
+                        <img src="./images/smartphone.png" alt="Иконка смартфона" width="370">
                         <h3 class="capabilities">Мобильные приложения</h3>
                     </li>
-                    <li>
-                        <img src="./images/display.png" alt="Иконка монитора" width="380">
+                    <li class="benefit-item">
+                        <img src="./images/display.png" alt="Иконка монитора" width="370">
                         <h3 class="capabilities">Дизайнерские решения</h3>
                     </li>
                 </ul>
@@ -94,48 +94,48 @@
                 <h2 class="title-section">Наша команда</h2>
                 <ul class="team-flex">
                     <li class="team-flex-item">
-                        <img src="./images/John.png" alt="Фото Джона Смита" width="278" class="team-flex-photo">
+                        <img src="./images/John.png" alt="Фото Джона Смита" width="270" class="team-flex-photo">
                         <h3 lang="en" class="title">John Smith</h3>
                         <p lang="en">Product Designer</p>
                         <ul class="social-links">
-                            <li><a href="" class="logo"><img src="./images/instagram.svg" alt="Логотип Инстаграм"></a></li>
-                            <li><a href=""><img src="./images/Twitter.svg" alt="Логотип Твиттер"></a></li>
-                            <li><a href=""><img src="./images/Facebook.svg" alt="Логотип Фейсбук"></a></li>
-                            <li><a href=""><img src="./images/linkedin.svg" alt="Логотип Ликнедин"></a></li>
+                            <li><a href="" class="logo"><img src="./images/instagram.svg" alt="Логотип Инстаграм" class="logo-links"></a></li>
+                            <li><a href=""><img src="./images/Twitter.svg" alt="Логотип Твиттер" class="logo-links"></a></li>
+                            <li><a href=""><img src="./images/Facebook.svg" alt="Логотип Фейсбук" class="logo-links"></a></li>
+                            <li><a href=""><img src="./images/linkedin.svg" alt="Логотип Ликнедин" class="logo-links"></a></li>
                         </ul>                
                     </li>
                     <li class="team-flex-item">
-                        <img src="./images/Marta.png" alt="Фото Марты Стюарт" width="278" class="team-flex-photo">
+                        <img src="./images/Marta.png" alt="Фото Марты Стюарт" width="270" class="team-flex-photo">
                         <h3 lang="en" class="title">Marta Stewart</h3>
                         <p lang="en">Frontend Developer</p>
                         <ul class="social-links">
-                            <li><a href=""><img src="./images/instagram.svg" alt="Логотип Инстаграм"></a></li>
-                            <li><a href=""><img src="./images/Twitter.svg" alt="Логотип Твиттер"></a></li>
-                            <li><a href=""><img src="./images/Facebook.svg" alt="Логотип Фейсбук"></a></li>
-                            <li><a href=""><img src="./images/linkedin.svg" alt="Логотип Ликнедин"></a></li>
-                        </ul>
+                            <li><a href="" class="logo"><img src="./images/instagram.svg" alt="Логотип Инстаграм" class="logo-links"></a></li>
+                            <li><a href=""><img src="./images/Twitter.svg" alt="Логотип Твиттер" class="logo-links"></a></li>
+                            <li><a href=""><img src="./images/Facebook.svg" alt="Логотип Фейсбук" class="logo-links"></a></li>
+                            <li><a href=""><img src="./images/linkedin.svg" alt="Логотип Ликнедин" class="logo-links"></a></li>
+                        </ul>           
                     </li>
                     <li class="team-flex-item">
-                        <img src="./images/Robert.png" alt="Фото Роберта Якиса" width="278" class="team-flex-photo">
+                        <img src="./images/Robert.png" alt="Фото Роберта Якиса" width="270" class="team-flex-photo">
                         <h3 lang="en" class="title">Robert Jakis</h3>
                         <p lang="en">Marketing</p>
                         <ul class="social-links">
-                            <li><a href=""><img src="./images/instagram.svg" alt="Логотип Инстаграм"></a></li>
-                            <li><a href=""><img src="./images/Twitter.svg" alt="Логотип Твиттер"></a></li>
-                            <li><a href=""><img src="./images/Facebook.svg" alt="Логотип Фейсбук"></a></li>
-                            <li><a href=""><img src="./images/linkedin.svg" alt="Логотип Ликнедин"></a></li>
-                        </ul>
+                            <li><a href="" class="logo"><img src="./images/instagram.svg" alt="Логотип Инстаграм" class="logo-links"></a></li>
+                            <li><a href=""><img src="./images/Twitter.svg" alt="Логотип Твиттер" class="logo-links"></a></li>
+                            <li><a href=""><img src="./images/Facebook.svg" alt="Логотип Фейсбук" class="logo-links"></a></li>
+                            <li><a href=""><img src="./images/linkedin.svg" alt="Логотип Ликнедин" class="logo-links"></a></li>
+                        </ul>           
                     </li>
                     <li class="team-flex-item">
-                        <img src="./images/Martin.png" alt="Фото Мартина До" width="278" class="team-flex-photo">
+                        <img src="./images/Martin.png" alt="Фото Мартина До" width="270" class="team-flex-photo">
                         <h3 lang="en" class="title">Martin Doe</h3>
                         <p lang="en">UI Designer</p>
                         <ul class="social-links">
-                            <li><a href=""><img src="./images/instagram.svg" alt="Логотип Инстаграм"></a></li>
-                            <li><a href=""><img src="./images/Twitter.svg" alt="Логотип Твиттер"></a></li>
-                            <li><a href=""><img src="./images/Facebook.svg" alt="Логотип Фейсбук"></a></li>
-                            <li><a href=""><img src="./images/linkedin.svg" alt="Логотип Ликнедин"></a></li>
-                        </ul>
+                            <li><a href="" class="logo" ><img src="./images/instagram.svg" alt="Логотип Инстаграм" class="logo-links"></a></li>
+                            <li><a href=""><img src="./images/Twitter.svg" alt="Логотип Твиттер" class="logo-links"></a></li>
+                            <li><a href=""><img src="./images/Facebook.svg" alt="Логотип Фейсбук" class="logo-links"></a></li>
+                            <li><a href=""><img src="./images/linkedin.svg" alt="Логотип Ликнедин" class="logo-links"></a></li>
+                        </ul>           
                     </li>
                 </ul>
             </div>
