внесены правки, кроме отдельного 1 случая в портфолио

--- a/index.html
+++ b/index.html
@@ -38,28 +38,28 @@
                 <ul class="advantages">
                     <li class="advantages-element">
                         <div class="advantages-content">
-                            <img src="./images/satellite-dish.svg " alt="Иконка спутниковой тарелки">
+                            <img src="./images/satellite-dish.svg " alt="Иконка спутниковой тарелки" class="satellite-dish">
                             <h3 class="advantages-title">Внимание к деталям</h3>
                             <p class="advantages-description">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                         </div>
                     </li>
                     <li class="advantages-element">
                         <div class="advantages-content">
-                            <img src="./images/clock.svg" alt="Иконка часов">
+                            <img src="./images/clock.svg" alt="Иконка часов" class="clock">
                             <h3 class="advantages-title">Пунктуальность</h3>
                             <p class="advantages-description">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                         </div>
                     </li>
                     <li class="advantages-element">
                         <div class="advantages-content">
-                            <img src="./images/computer.svg" alt="Иконка ноутбука">
+                            <img src="./images/computer.svg" alt="Иконка ноутбука" class="computer">
                             <h3 class="advantages-title">Планирование</h3>
                             <p class="advantages-description">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                         </div>
                     </li>
                     <li class="advantages-element">
                         <div class="advantages-content">
-                            <img src="./images/cosmonaut.svg" alt="Логотип космонафта">
+                            <img src="./images/cosmonaut.svg" alt="Логотип космонафта" class="cosmonaut">
                             <h3 class="advantages-title">Современные технологии</h3>
                             <p class="advantages-description">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                         </div>
@@ -173,7 +173,7 @@
                     </address>
                 </div>
 
-                <div class="footer-flex-block">
+                <div class="footer-flex-block network">
                     <h2 class="join">присоединяйтесь</h2>
                     <ul class="social-links-footer">
                         <li class="social-logo"><a href="" class="join-link"><img src="./images/social-links-white/instagram-white.svg" alt="Логотип Инстаграм" class="join-photo"></a></li>
@@ -184,7 +184,6 @@
                 </div>
                 
             </section>
-            <div class="line"></div>
             <p class="developers">2020 | Developed by GoIT Students</p>
         </div>
     </footer>
