--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,7 @@
                             <img src="./images/portfolio/basketball_players.jpg" alt="Фотография баскетболистов" width="370">
                             <p class="text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                             <div class="portfolio-card">
-                                <h2>Постер <span lang="en">New Orlean vs Golden Stars</span></h2>
+                                <h2>Постер <span lang="en">New Orlean vs Golden Star</span></h2>
                                 <p class="product">Дизайн</p>
                             </div>
                         </a>
